--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
       "lint": "next lint"
    },
    "dependencies": {
-      "@emotion/react": "^11.10.6",
       "@reduxjs/toolkit": "^1.9.1",
       "@tabler/icons-react": "^3.19.0",
       "@tippyjs/react": "^4.2.6",
       "@types/node": "18.11.18",
       "@types/react": "18.0.27",
       "@types/react-dom": "18.0.10",
+      "dayjs": "^1.11.13",
       "eslint": "8.32.0",
       "eslint-config-next": "13.1.2",
       "next": "^14.2.13",
@@ -26,6 +26,7 @@
       "react-perfect-scrollbar": "^1.5.8",
       "react-popper": "^2.3.0",
       "react-redux": "^8.0.5",
+      "sweetalert2": "^11.6.13",
       "typescript": "4.9.4",
       "yup": "^0.32.11"
    },
