--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
       "react-animate-height": "^3.1.0",
       "react-dom": "18.2.0",
       "react-i18next": "^12.1.5",
+      "react-images-uploading": "^3.1.7",
       "react-perfect-scrollbar": "^1.5.8",
       "react-popper": "^2.3.0",
+      "react-quill": "^2.0.0",
       "react-redux": "^8.0.5",
+      "react-select": "^5.8.1",
       "sweetalert2": "^11.6.13",
       "typescript": "4.9.4",
       "yup": "^0.32.11"
