Feature: Components [SETUP]

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "next": "^14.2.13",
       "react": "18.2.0",
       "react-animate-height": "^3.1.0",
+      "react-currency-input-field": "^3.8.0",
       "react-dom": "18.2.0",
       "react-i18next": "^12.1.5",
       "react-images-uploading": "^3.1.7",
